# flexworld-fwcs

./: CMakeLists.txt
cmake/: FindFWCS.cmake
doc/doxygen/: Doxyfile.in
examples/: CMakeLists.txt  Mouselook.cpp  Runner.cpp
include/FWCS/: BaseControllerFactory.hpp  BaseExecutorFactory.hpp  CollisionTester.hpp  Config.hpp  Controller.hpp  Controller.inl  ControllerFactory.hpp  ControllerFactory.inl  ControllerRequirements.hpp  ControllerRequirements.inl  Entity.hpp  Entity.inl  EntityObserver.hpp  Executor.hpp  ExecutorFactory.hpp  ExecutorFactory.inl  ExecutorRequirements.hpp  ExecutorRequirements.inl  FirstPersonTurnConstraint.hpp  Math.hpp  Math.inl  NonCopyable.hpp  Property.hpp  Property.inl  System.hpp  System.inl  TopDownTurnConstraint.hpp  Types.hpp
include/FWCS/Controllers/: Accelerate.hpp  Acceleration.hpp  Doc.hpp  Drag.hpp  ForceReset.hpp  Friction.hpp  Gravity.hpp  Jump.hpp  LookAt.hpp  Mouselook.hpp  Move.hpp  Movement.hpp  MovementForceTransform.hpp  Position.hpp  PositionLimit.hpp  ThrustReset.hpp  Turn.hpp  Velocity.hpp  Walk.hpp
include/FWCS/Properties/: Drag.hpp  Environment.hpp  Jump.hpp  Mass.hpp  Moveable.hpp  Object.hpp  Position.hpp  PositionLimit.hpp  Thrust.hpp  Velocity.hpp
src/FWCS/: BaseControllerFactory.cpp  BaseExecutorFactory.cpp  CollisionTester.cpp  Controller.cpp  ControllerRequirements.cpp  Entity.cpp  EntityObserver.cpp  Executor.cpp  ExecutorRequirements.cpp  FirstPersonTurnConstraint.cpp  Math.cpp  NonCopyable.cpp  Property.cpp  System.cpp  TopDownTurnConstraint.cpp
src/FWCS/Controllers/: Accelerate.cpp  Acceleration.cpp  Drag.cpp  ForceReset.cpp  Friction.cpp  Gravity.cpp  Jump.cpp  LookAt.cpp  Mouselook.cpp  Move.cpp  Movement.cpp  MovementForceTransform.cpp  Position.cpp  PositionLimit.cpp  ThrustReset.cpp  Turn.cpp  Velocity.cpp  Walk.cpp
src/FWCS/Properties/: Drag.cpp  Environment.cpp  Jump.cpp  Mass.cpp  Moveable.cpp  Object.cpp  Position.cpp  PositionLimit.cpp  Thrust.cpp  Velocity.cpp
test/: CMakeLists.txt
test/src/: DummyProperties.cpp  DummyProperties.hpp  ExampleController.cpp  ExampleController.hpp  ExampleExecutor.cpp  ExampleExecutor.hpp  TestAccelerateController.cpp  TestAcceleration.cpp  TestAccelerationController.cpp  TestCollisionTester.cpp  TestController.cpp  TestControllerFactory.cpp  TestControllerRequirements.cpp  TestDragController.cpp  TestDragProperty.cpp  TestEntity.cpp  TestEnvironmentProperty.cpp  TestExecutorFactory.cpp  TestExecutorRequirements.cpp  TestFirstPersonTurnConstraint.cpp  TestForceResetController.cpp  TestFrictionController.cpp  TestGravityController.cpp  TestJumpController.cpp  TestJumpProperty.cpp  TestLookAtController.cpp  TestMassProperty.cpp  TestMath.cpp  TestMouselookController.cpp  TestMoveController.cpp  TestMoveableProperty.cpp  TestMovementController.cpp  TestMovementForceTransformController.cpp  TestObjectProperty.cpp  TestPositionController.cpp  TestPositionLimitController.cpp  TestPositionLimitProperty.cpp  TestPositionProperty.cpp  TestProperty.cpp  TestSystem.cpp  (+7 more)
